tests/should-pass/parsing/string.fk
data Unit = Unit : Unit.

interface State x = get : x
	          | put : x -> Unit.

interface Receive x = receive : x.

semi : x -> y -> y.
semi   x    y  = y.

runState : x -> [State x]y    -> y.
runState   x    [put x' -> k] =  runState x' (k Unit).
runState   x    [get    -> k] =  runState x  (k x).
runState   x          y       =  y.

main : String.
main = runState "Hello" (semi (put (strcat (get!) " World!\n")) (get!)).
